# ai_kt_agent

./: .gitignore  README.md  answer.py  main.py  make_thumbs.py  mcp_test.py  pyproject.toml  requirements.txt
sessions/127.0.0.1/: latest.json  log-20250907.jsonl
sessions/201.203.13.11/: latest.json  log-20250907.jsonl
src/: main.py
src/.stremlit/: config.toml
src/agent/: chat_agent.py  mi_dm_agent.py
src/chat/: ReadMe.md  RedisMemory.py  SessionStore.py  SimpleMemory.py  chat_client.py  chat_main.py
src/common/: GlobalSetting.py  LLMType.py  SelectImage.py  prompts.py
src/data/: all_chunk_list.jsonl  sources.yaml
src/memory/: RedisMemory.py  SessionStore.py
src/pipe_lines/: chunking.ipynb  chunking.py  index.py  rag.py
src/run_app/back_end/: Readme.md  fast_api.py  fast_api_test.py
src/run_app/front_end/: Readme.md  home.py
src/run_app/front_end/pages/: 0_5_theme_intro.py  0_waiting_video.py  1_select_image.py  2_chat.py  2_chat_goods.py
src/tools/: rag.py  tavily_client.py  tavily_test.ipynb
