[project]
name = "ai-kt-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.1",
    "huggingface-hub>=0.34.4",
    "langchain>=0.3.27",
    "langgraph>=0.6.6",
    "ollama>=0.5.3",
    "pypdf>=6.0.0",
    "qdrant-client>=1.15.1",
    "torch>=2.8.0",
    "transformers>=4.56.0",
]
