[project]
name = "ai-kt-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.1",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "flagembedding>=1.3.5",
    "httpx>=0.28.1",
    "huggingface-hub>=0.34.4",
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langgraph>=0.6.6",
    "ollama>=0.5.3",
    "openai>=1.107.0",
    "pymupdf>=1.26.4",
    "pypdf>=6.0.0",
    "qdrant-client>=1.15.1",
    "rank-bm25>=0.2.2",
    "redis>=6.4.0",
    "safetensors>=0.6.2",
    "streamlit-extras>=0.7.7",
    "tavily-python>=0.7.11",
    "torch>=2.8.0",
    "transformers>=4.56.0",
    "uvicorn>=0.35.0",
    "streamlit>=1.31.0", 
]
